--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
     "@types/react-dom": "18.2.4",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.2",
+    "firebase": "^9.22.0",
     "next": "13.4.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
+    "react-router-dom": "^6.11.2",
+    "react-toastify": "^9.1.3",
     "typescript": "5.0.4"
   },
   "devDependencies": {
